# Giame-Android-Client-Project

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/es/eukariotas/giame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: espacio.tmx  espacionew.tmx  tileset.tsx
app/src/main/cpp/: Android.mk  CMakeLists.txt  evaluate.h  main.cpp  native.cpp
app/src/main/java/es/eukariotas/giame/: AboutFragment.kt  AndroidLauncher.java  AvionesJuego.java  BuscarPartidaFragment.kt  ConexionFragment.kt  FirstFragment.kt  GameFragment.kt  InfoFragment.kt  LoginFragment.kt  MainActivity.kt  MenuFragment.kt  RegisterFragment.kt  SecondFragment.kt  TicTacToeLogic.kt
app/src/main/java/es/eukariotas/giame/core/: HeaderInterceptor.kt  RetrofitHelper.kt
app/src/main/java/es/eukariotas/giame/persistence/: DataBaseProv.kt
app/src/main/java/es/eukariotas/giame/test/: TestAjedrez.kt
app/src/main/java/es/eukariotas/giame/ui/: AjedrezFragment.kt  (+6 more)
app/src/main/res/layout/: activity_main.xml  fragment_about.xml  fragment_ajedrez.xml  fragment_buscar_partida.xml  fragment_conexion.xml  fragment_configuration.xml  fragment_first.xml  fragment_game.xml  fragment_info.xml  fragment_login.xml  fragment_menu.xml  fragment_register.xml  fragment_second.xml  item_partida.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings_en.xml
app/src/main/res/values-es/: strings_es.xml
app/src/main/res/values-fr/: strings_fr.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings_zh.xml
app/src/test/java/es/eukariotas/giame/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+38 files in other folders)
